# voice_BIG

./: .env.example  .gitignore  README.md  ppt说明.md  pyproject.toml
data/: research_samples.json  samples.json
data/cases/cnn_explainer/: gold.json  transcript.txt
data/cases/diffusion_roadmap/: gold.json  transcript.txt
data/cases/video_generation_timeline/: gold.json  transcript.txt
data/research_cases/ablation_study_design/: gold.json  gold_mermaid.mmd  transcript.txt
data/research_cases/active_learning/: gold.json  gold_mermaid.mmd  (+1 more)
docs/: PLAN.md  architecture.md  experiment_plan.md  handoff.md  idea.md  iteration_log.md  project_overview.md  requirements.md  research_eval_results.json  research_methodology.md  research_notes.md  tts_options.md
projects/sketchvoice-mmsb-graph-defense_ppt169_20260613/: README.md  design_spec.md  spec_lock.md
projects/sketchvoice-mmsb-graph-product-defense_ppt169_20260614/: README.md  design_spec.md  image_analysis.csv  spec_lock.md
report/: main.tex  references.bib
scripts/: evaluate_research_cases.py  evaluate_samples.py  generate_test_cases.py  make_research_figures.py  prepare_research_cases.py
src/sketchvoice/: __init__.py  config.py  image_service.py  main.py  mermaid.py  models.py  narration_service.py  openai_service.py  provider_errors.py  research.py
tests/: test_api.py  test_config.py  test_image_service.py  test_mermaid.py  test_models.py  test_narration_service.py  test_research_bridge.py  test_research_dataset.py  test_research_evaluation.py  test_sample_cases.py  test_static_frontend.py
(+107 files in other folders)
